--- a/index.html
+++ b/index.html
@@ -18,11 +18,28 @@
             
         <div class="status-bar__conlumn">
             <span>110%</span>
-            <!--Battery Icon-->
-            <!--Lightning Icon-->
+            <i class="fas fa-battery-three-quarters"></i>
+            <i class="fas fa-bolt"></i>
         </div>
     </div>
 
+    <header class="welcome-header">
+        <h1 class="welcome-header__title">
+            Welcome to Kokoa Clone
+        </h1>
+        <p class="welcome-header__text">
+            If you have a Kokoa Account, login with your email or phone number.
+        </p>
+    </header class="welcome-header">
+
+    <form id="login-form">
+        <input type="text" placeholder="Email or phone number"/>
+        <input type="password" placeholder="Password"/>
+        <input type="submit" value="Log In"/>
+        <a href="#">Find Kakao Account or Password</a>
+    </form>
+
+    
 
     <script src="https://kit.fontawesome.com/e6a81d5c61.js" crossorigin="anonymous"></script>
 </body>
