--- a/index.html
+++ b/index.html
@@ -1,22 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="css/styles.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Welcome to KokoaTalk</title>
 </head>
 <body>
-    <div id="status-bar">
-        <div class="status-bar__conlumn">
+    <div class="status-bar">
+        <div class="status-bar__column">
             <span>No Service</span>
             <i class="fas fa-wifi"></i>
         </div>
-        <div class="status-bar__conlumn">
+        <div class="status-bar__column">
             <span>18:43</span>
         </div>
             
-        <div class="status-bar__conlumn">
+        <div class="status-bar__column">
             <span>110%</span>
             <i class="fas fa-battery-three-quarters"></i>
             <i class="fas fa-bolt"></i>
