--- a/find.html
+++ b/find.html
@@ -62,7 +62,29 @@
         <div class="open-chat">
             <div class="open-chat__header">
                 <h4 class="open-chat__title">Open Chat</h4>
-                <span>Go to Openchat Home</span>
+                <span>Go to Openchat Home <i class="fas fa-chevron-right fa-xs"></i></span>
+            </div>
+            <div class="open-post">
+                <div class="open-post__column">
+                    <h5 class="open-post__title">#BTS</h5>
+                    <h6 class="open-post__hashtags">#bts#army#friends</h6>
+                    <div class="open-post__members">
+                        <img src="https://dimg.donga.com/wps/NEWS/IMAGE/2021/09/07/109121848.2.jpg" alt=""/>
+                        <span class="open-post__member-count">802 members</span>
+                        <div class="divider"></div>
+                        <span class="open-post__member-status">Active</span>
+                    </div>
+
+                </div>
+
+                <div class="open-post__column">
+                    <div class="open-post__photo">
+                        <img src="https://dimg.donga.com/wps/NEWS/IMAGE/2021/09/07/109121848.2.jpg" alt=""/>
+                        <div class="open-post__heart-count">
+                            <i class="fas fa-heart fa-xs"></i><span>326</span>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
 
