--- a/find.html
+++ b/find.html
@@ -36,20 +36,20 @@
 
 
     <main class="main-screen">
-        <div class="find-icons">
-            <div class="find-icons__icon">
+        <div class="icon-row">
+            <div class="icon-row__icon">
                 <i class="fas fa-qrcode"></i>
                 <span>QR Code</span>
             </div>
-            <div class="find-icons__icon">
+            <div class="icon-row__icon">
                 <i class="far fa-address-book"></i>
                 <span>Add by Contacts</span>
             </div>
-            <div class="find-icons__icon">
+            <div class="icon-row__icon">
                 <i class="fas fa-fingerprint"></i>
                 <span>Add by ID</span>
             </div>
-            <div class="find-icons__icon">
+            <div class="icon-row__icon">
                 <i class="far fa-envelope"></i>
                 <span>Invite</span>
             </div>
@@ -69,7 +69,7 @@
                     <h5 class="open-post__title">#BTS</h5>
                     <h6 class="open-post__hashtags">#bts#army#friends</h6>
                     <div class="open-post__members">
-                        <img src="https://dimg.donga.com/wps/NEWS/IMAGE/2021/09/07/109121848.2.jpg" alt=""/>
+                        <img src="https://dimg.donga.com/wps/NEWS/IMAGE/2021/09/07/109121848.2.jpg" alt="" />
                         <span class="open-post__member-count">802 members</span>
                         <div class="divider"></div>
                         <span class="open-post__member-status">Active</span>
@@ -79,7 +79,7 @@
 
                 <div class="open-post__column">
                     <div class="open-post__photo">
-                        <img src="https://dimg.donga.com/wps/NEWS/IMAGE/2021/09/07/109121848.2.jpg" alt=""/>
+                        <img src="https://dimg.donga.com/wps/NEWS/IMAGE/2021/09/07/109121848.2.jpg" alt="" />
                         <div class="open-post__heart-count">
                             <i class="fas fa-heart fa-xs"></i><span>326</span>
                         </div>
