--- a/friends.html
+++ b/friends.html
@@ -35,25 +35,25 @@
     </div>
   </header>
 
-  <a id="friends-display-link">
-    <i class="fas fa-info-circle"></i> Friend's Names Display <i class="fas fa-chevron-right fa-xs"></i>
-  </a>
+
 
   <main class="friends-screen">
-
+    <a id="friends-display-link">
+      <i class="fas fa-info-circle"></i> Friend's Names Display <i class="fas fa-chevron-right fa-xs"></i>
+    </a>
     <div class="user-component">
       <div class="user-component__column">
-        <img
-          src="https://dimg.donga.com/wps/NEWS/IMAGE/2021/09/07/109121848.2.jpg"
+        <img src="https://dimg.donga.com/wps/NEWS/IMAGE/2021/09/07/109121848.2.jpg"
           class="user-component__avatar--xl" />
         <div class="user-component__text">
           <h4 class="user-component__title">Nicolas</h4>
           <!-- <h6 class="user-component__subtitle">this text whatever</h6> -->
         </div>
-  
+
       </div>
       <div class="user-component__column"></div>
-    </div> <!--User component-->
+    </div>
+    <!--User component-->
 
     <div class="friends-screen__channel">
       <div class="friends-screen__channel-header">
@@ -63,8 +63,7 @@
 
       <div class="user-component">
         <div class="user-component__column">
-          <img
-            src="https://dimg.donga.com/wps/NEWS/IMAGE/2021/09/07/109124848.2.jpg"
+          <img src="https://dimg.donga.com/wps/NEWS/IMAGE/2021/09/07/109124848.2.jpg"
             class="user-component__avatar--sm" />
           <div class="user-component__text">
             <h4 class="user-component__title--not-bold">Channel</h4>
@@ -76,7 +75,7 @@
             <span>2</span>
             <i class="fas fa-chevron-right fa-xs"></i>
           </div>
-         
+
         </div>
       </div>
     </div>
