--- a/chat.html
+++ b/chat.html
@@ -2,86 +2,57 @@
 <html lang="en">
 
 <head>
-  <link rel="stylesheet" href="css/styles.css" />
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Chats - Kokoa Clone</title>
+    <link rel="stylesheet" href="css/styles.css" />
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Chat - Kokoa Clone</title>
 </head>
 
-<body>
-  <div class="status-bar">
-    <div class="status-bar__column">
-      <span>No Service</span>
-      <i class="fas fa-wifi"></i>
-    </div>
-    <div class="status-bar__column">
-      <span>18:43</span>
-    </div>
-
-    <div class="status-bar__column">
-      <span>110%</span>
-      <i class="fas fa-battery-three-quarters"></i>
-      <i class="fas fa-bolt"></i>
-    </div>
-  </div>
-
-  <header class="screen-header">
-    <h1 class="screen-header__title">Chats</h1>
-    <div class="screen-header__icon">
-      <span><i class="fas fa-search fa-lg"></i></span>
-      <span><i class="far fa-comment-dots fa-lg"></i></span>
-      <span><i class="fas fa-music fa-lg"></i></span>
-      <span><i class="fas fa-cog fa-lg"></i></span>
-    </div>
-  </header>
-
-
-  <main class="main-screen">
-
-    <div class="user-component">
-      <div class="user-component__column">
-        <img
-          src="https://dimg.donga.com/wps/NEWS/IMAGE/2021/09/07/109121848.2.jpg"
-          class="user-component__avatar" />
-        <div class="user-component__text">
-          <h4 class="user-component__title">Nicolas</h4>
-          <h6 class="user-component__subtitle">Please check My Kokoa Account Info</h6>
+<body id="chat-screen">
+    <div class="status-bar">
+        <div class="status-bar__column">
+            <span>No Service</span>
+            <i class="fas fa-wifi"></i>
         </div>
-  
-      </div>
-      <div class="user-component__column">
-        <span class="user-component__time">21:22</span>
-        <div class="badge">1</div>
-      </div>
-    </div> <!--User component-->
+        <div class="status-bar__column">
+            <span>18:43</span>
+        </div>
 
-  </main>
+        <div class="status-bar__column">
+            <span>110%</span>
+            <i class="fas fa-battery-three-quarters"></i>
+            <i class="fas fa-bolt"></i>
+        </div>
+    </div>
+
+    <header class="alt-header">
+        <div class="alt-header__column">
+            <a href="chats.html">
+                <i class="fas fa-angle-left fa-3x"></i>
+            </a>
+        </div>
+        <div class="alt-header__column">
+            <h1 class="alt-header__title">니꼬</h1>
+        </div>
+        <div class="alt-header__column">
+            <i class="fas fa-search fa-lg"></i>
+            <i class="fas fa-bars fa-lg"></i>
+        </div>
+    </header>
 
 
-  <nav class="nav">
-    <ul class="nav__list">
-      <li class="nav__btn">
-        <a class="nav__link" href="friends.html">
-          <i class="far fa-user fa-2x"></i>
-        </a>
-      </li>
-      <li class="nav__btn">
-        <a class="nav__link" href="chat.html">
-          <span class="nav__notification badge">1</span>
-          <i class="fas fa-comment fa-2x"></i>
-        </a>
-      </li>
-      <li class="nav__btn">
-        <a class="nav__link" href="find.html"><i class="fas fa-search fa-2x"></i></a>
-      </li>
-      <li class="nav__btn">
-        <a class="nav__link" href="more.html"><span class="nav__dot"></span><i class="fas fa-ellipsis-h fa-2x"></i></a>
-      </li>
-    </ul>
-  </nav>
 
-  <script src="https://kit.fontawesome.com/e6a81d5c61.js" crossorigin="anonymous"></script>
+    <main class="main-screen main-chat">
+
+        <div class="chat__timestamp">
+            Tuesday, June 30, 2020
+        </div>
+
+
+    </main>
+
+    <script src="https://kit.fontawesome.com/e6a81d5c61.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
