--- a/chat.html
+++ b/chat.html
@@ -33,7 +33,7 @@
             </a>
         </div>
         <div class="alt-header__column">
-            <h1 class="alt-header__title">니꼬</h1>
+            <h1 class="alt-header__title">123123</h1>
         </div>
         <div class="alt-header__column">
             <i class="fas fa-search fa-lg"></i>
